--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_stolen"
-        android:name="com.damazo.bikes.ui.stolen.StolenFragment"
+        android:name="com.damazo.bikes.ui.stolen.presentation.view.StolenFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_stolen" />
 
