--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryLight">#3939D1</color>
     <color name="colorPrimaryDark">#040430</color>
     <color name="colorAccent">#7070ED</color>
+    <color name="background">#7C89C4</color>
 </resources>
